grammars/tree-sitter-oberon-x/grammar.js
    module: $ => choice(
      seq(
        $.module_header,
        optional($.import_list),
        // AmigaOberon dialect extension (round 24, corpus-confirmed in Interfaces/Rexx.mod,
        // Interfaces/Commodities.mod, Interfaces/Utility.mod, Module/Concurrency.mod,
        // Module/GarbageCollector.mod): CONST/TYPE/VAR sections and PROCEDURE declarations
        // can interleave repeatedly at module level (e.g. TYPE...CONST...PROCEDURE
        // PROCEDURE...TYPE...CONST...PROCEDURE...), not just one declarations block
        // followed by one procedures block as the normative EBNF has it.
        repeat(choice($.const_decls, $.type_decls, $.variable_decls, $.procedure_decls)),
        // AmigaOberon dialect extension (not in normative EBNF, confirmed via corpus): a
        // module-level "CLOSE" section after "BEGIN", holding a finalizer statement sequence
        // run on module unload.
        // Oberon-X dialect extension (docs/plan.md M5): "DO" accepted as a synonym for
        // "BEGIN" everywhere the latter introduces a statement_seq, not a breaking rename —
        // base Oberon-2 corpus files stay valid Oberon-X input.
        optional(seq(
          choice($.kBegin, $.kDo),
          optional($.statement_seq),
          optional(seq($.kClose, optional($.statement_seq)))
        )),
        $.module_footer
      ),
      seq(
        $.definition_header,
        optional($.import_list),
        repeat(choice($.const_decls, $.type_decls, $.variable_decls)),
        repeat($.definition_proc_decl),
        $.module_footer
      )
    ),
    // Oberon-A dialect extension (round 21, corpus-confirmed in Classface.mod,
    // Obsolete/BoopsiUtil.mod, Obsolete/RexxUtil.mod): a module-level external object-file
    // name, e.g. `MODULE [4] Classface ["Classface.o"];` — same bracketed-string shape
    // `external_code_names` already gives a procedure heading, reused here rather than
    // duplicating the node.
    module_header: $ => seq(
      $.kModule, optional($.sysflag), $.ident, optional($.external_code_names), ';'
    ),

    // sysflag = "[" integer "]"
    // Oberon-A dialect extension (not in normative EBNF, confirmed via corpus and docs/OC.doc):
    // a "system flag" marking a MODULE, POINTER, RECORD or PROCEDURE as following a foreign
    // (non-Oberon) calling/layout convention — 1=Modula-2, 2=C, 3=BCPL, 4=Assembly. Placed
    // directly after the keyword it modifies, before whatever normally follows.
    definition_header: $ => seq($.kDefinition, $.ident, ';'),
    module_footer: $ => seq($.kEnd, $.ident, '.'),

    // definition_proc_decl = procedure_heading ";"
    type_decls: $=> seq(
      $.kType, 
      repeat(seq(
        $.type_decl, ';'
      ))
    ),

    // variable_decls =["VAR" {variable_decl ";"}]
    type_decl: $ => seq(
      $.ident_def, '=', $.type
    ),

    // struct_type = array_type | record_type | pointer_type | procedure_type
    struct_type: $ => choice(
      $.array_type,
      $.record_type,
      $.pointer_type,
      $.procedure_type,
      $.amiga_struct_type
    ),

    // amiga_struct_type = "STRUCT" ["(" field_list ")"] [field_list_seq] "END"
    // AmigaOberon dialect extension (not in normative EBNF — AmigaOberon is based on
    // Wirth's original Oberon report, not Oberon-2, see docs/language-baseline.md): a
    // C-interop struct type for foreign (non-GC-tracked) Amiga library structures, always
    // paired with UNTRACED POINTER. Structurally close to record_type, but the parenthesized
    // "base" slot is a single embedded named field (ident ":" type), C-struct-embedding
    // style, not a bare base-type reference — confirmed via corpus (OberonLib.mod's `Node =
    // STRUCT (dummy: CommonNode) succ: NodePtr; ... END`). Reuses field_list_seq's own
    // leading-";" continuation branch for what follows the parenthesized field (confirmed by
    // OberonLib.mod's `MemElement = STRUCT (node: MinNode); size: LONGINT; ... END`), so no
    // separate rule is needed for the "; more fields" tail.
    record_type: $ => seq(
      $.kRecord,
      optional($.sysflag),
      optional(seq(
        '(',
        $.base_type,
        ')'
      )),
      optional($.field_list_seq),
      $.kEnd
    ),

    // base_type = qualident
    base_type: $ => $.qualident,

    // field_list_seq = field_list {";" field_list}
    // FieldList is itself optional in the EBNF ([...]), same shape as StatementSeq — the
    // corpus relies on a trailing ";" before "END" (e.g. voc's Printer.Mod). Same two-branch
    // fix as statement_seq: every branch must still consume at least one token, so the
    // "totally empty" case is expressed by omitting field_list_seq at the call site
    // (already optional($.field_list_seq) in record_type), not by this rule matching nothing.
    field_list_seq: $ => choice(
      seq($.field_list, repeat(seq(';', optional($.field_list)))),
      repeat1(seq(';', optional($.field_list)))
    ),

    // field_list = [ident_list ":" type]
    // STJ-Oberon dialect extension (confirmed via corpus, e.g. DEF/BINTREE.DEF,
    // DEF/CDCL.DEF, DEF/STACK.DEF): a DEFINITION module's RECORD body may list its
    // type-bound procedure headings directly as field_list items, interleaved with
    // ordinary fields, instead of declaring them separately at module level (the
    // module-level `definition_proc_decl` shape). Reuses `procedure_heading` bare
    // (not `definition_proc_decl`) since `field_list_seq` already supplies the ";"
    // separator between items.
    field_list: $ => choice(
      seq($.ident_list, ':', $.type),
      $.procedure_heading
    ),

    // ident_list = ident_def {"," ident_def}
    ident_list: $ => seq(
      $.ident_def, repeat(seq(',', $.ident_def))
    ),

    // pointer_type = ["UNTRACED"] "POINTER" "TO" type | "BPOINTER" "TO" type
    // AmigaOberon dialect extension (not in normative EBNF, confirmed via corpus): "UNTRACED"
    // marks a pointer as not tracked/scanned by the garbage collector, always paired in the
    // corpus with an amiga_struct_type (or otherwise foreign-layout) target, e.g. `UNTRACED
    // POINTER TO TypDesc`. "BPOINTER" is AmigaDOS's own BCPL-relative pointer type — a
    // distinct keyword replacing "POINTER" entirely rather than modifying it (confirmed via
    // corpus, e.g. Dos.mod's `FileLockPtr* = BPOINTER TO FileLock;`, never "BPOINTER POINTER
    // TO").
    formal_params: $ => seq(
      "(",
      optional(seq(
        $.fp_section, repeat(seq(';', $.fp_section))
      )),
      ")",
      optional(seq(
        ':', $.qualident
      ))
    ),

    // fp_section = ["VAR"] ident [param_offset] {"," ident [param_offset]} ":" formal_type
    fp_section: $ => seq(
      optional($.kVar),
      $.ident, optional(choice($.param_offset, $.reg_spec)),
      repeat(seq(',', $.ident, optional(choice($.param_offset, $.reg_spec)))),
      ':',
      $.formal_type
    ),

    // param_offset = "{" integer "}" [".."]
    // AmigaOberon dialect extension: per-parameter vector-offset metadata paired with
    // a procedure's vector_offset, e.g. `PROCEDURE Foo(x{2}: LONGINT)`. Trailing ".." is
    // reg_spec's varargs marker, sibling here too (e.g. `data{9}..: SYSTEM.ADDRESS`).
    formal_type: $ => seq(
      repeat(seq($.kArray, optional($.length), $.kOf)),
      choice($.qualident, $.procedure_type)
    ),

    // qualident = [ident "."] ident
    qualident: $ => prec.left(choice(
      seq($.ident),
      seq(field("qualifier", $.ident), '.', field("property", $.ident)),
    )),

    // ident_def = ident ["*" | "-"]
    ident_def: $ => seq(
      $.ident, optional(choice($.kStar, $.kMinus))
    ),

    // variable_decl = ident_list ":" type
    // AmigaOberon dialect extension (not in normative EBNF, confirmed via corpus, always
    // exactly one identifier, never a comma list): a variable's identifier may carry an
    // absolute hardware-address annotation "[" integer "]" mapping it onto a fixed memory
    // location (custom-chip register), e.g. `Ciapra[0BFE001H]: SHORTSET;`. Modeled as a
    // sibling addressed_ident alternative rather than folded into the shared ident_list,
    // which record fields and formal parameters also use and never carry this.
    type: $ => choice(
      $.qualident,
      $.struct_type
    ),

    // procedure_decl = procedure_heading ";" procedure_body ident
    procedure_heading: $ => seq(
      $.kProcedure, optional(choice($.kStar, $.kMinus, '~')), optional($.sysflag),
      optional($.receiver), $.ident_def,
      optional(choice(
        $.vector_offset, $.square_vector_offset, $.external_code_names,
        $.curly_external_code_names
      )),
      optional($.formal_params),
      optional($.trap_offset)
    ),

    // trap_offset = integer "," integer
    // STJ-Oberon dialect extension (not in normative EBNF, confirmed via corpus): the
    // GEMDOS/BIOS/XBIOS trap number and function number of a "PROCEDURE-"-marked system-call
    // binding, e.g. `PROCEDURE- Bconout*(Char,Device : INTEGER) 3,13;`.
    receiver: $ => seq(
      '(', optional($.kVar), $.ident, ':', $.ident, ')'
    ),

    // forward_decl = "PROCEDURE" "^" [receiver] ident_def [formal_params]
    kStar:  $ => '*',
    kMinus: $ => '-',
    kEnd: $ => 'END',
    kVar: $ => 'VAR',
    kType: $ => 'TYPE',

    kDefinition: $ => 'DEFINITION',
    kModule: $ => 'MODULE',
    kRecord: $ => 'RECORD',
    kProcedure: $ => 'PROCEDURE',

    ident: $ => token(identifier),
  }
});
